<resources>
    <string name="app_name">FoodApp</string>
    <string name="burger">Burger</string>
    <string name="cola">Cola</string>
    <string name="total_price">Total Price</string>
    <string name="Order">Order</string>
    <string name="makeOrder">Make Order</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="addc">Add</string>
    <string name="deletec">Delete</string>
</resources>